upgrade code to 1.0.1

--- a/notebooks/char_rnn_sample_hangul.ipynb
+++ b/notebooks/char_rnn_sample_hangul.ipynb
@@ -63,7 +63,7 @@
       "\n",
       "\n",
       "data_loader.vocab looks like \n",
-      "{'ㄹ': 5, 'ㅍ': 31, '(': 45, '9': 64, '_': 69, \"'\": 49, 'ㅘ': 26, '\\n': 19, 'ㅟ': 35, '.': 24, 'ㄿ': 56, 'ㅉ': 40, 'ㄻ': 55, ':': 57, 'ㅙ': 53, 'ᴥ': 0, 'ㄸ': 32, '6': 59, '7': 71, 'ㅓ': 11, 'ㅐ': 21, 'ㅋ': 42, 'ㅀ': 51, '8': 68, 'ㄼ': 54, 'ㄳ': 60, 'ㄾ': 70, 'ㅚ': 33, 'ㅄ': 43, '?': 41, 'ㄶ': 44, ' ': 1, 'ㅡ': 8, 'ㅜ': 16, 'ㅖ': 39, 'ㅔ': 20, 'ㅅ': 10, '5': 63, 'ㄷ': 13, '>': 75, '-': 65, 'ㅇ': 2, 'ㅈ': 15, 'ㅕ': 18, 'ㅃ': 47, 'ㅒ': 74, 'ㅞ': 61, 'ㄺ': 48, 'ㅎ': 14, '0': 73, 'ㅌ': 30, 'ㅛ': 38, '\\x1a': 72, 'ㅢ': 25, '!': 52, '\"': 28, 'ㅗ': 9, 'ㅏ': 3, 'ㅝ': 36, 'ㅣ': 6, 'ㅑ': 34, 'ㄴ': 4, 'ㅁ': 12, '1': 58, ')': 46, 'ㄵ': 50, '4': 67, 'ㄱ': 7, '3': 66, '2': 62, 'ㅊ': 23, 'ㅠ': 37, 'ㅂ': 17, 'ㄲ': 29, 'ㅆ': 22, ',': 27} \n",
+      "{'ㄲ': 29, 'ㄺ': 48, ')': 46, 'ㅄ': 43, '1': 58, 'ㅡ': 8, 'ㅛ': 38, 'ㄸ': 32, 'ㅓ': 11, 'ㅌ': 30, 'ㅚ': 33, '2': 62, '\"': 28, '?': 41, ' ': 1, ',': 27, 'ㅑ': 34, 'ㅏ': 3, 'ㅅ': 10, 'ㅋ': 42, 'ㅂ': 17, '(': 45, 'ㄾ': 70, ':': 57, 'ㄼ': 54, '0': 73, 'ㄴ': 4, 'ᴥ': 0, 'ㄳ': 60, '_': 69, 'ㅃ': 47, 'ㅁ': 12, 'ㅞ': 61, 'ㅜ': 16, 'ㄹ': 5, 'ㄷ': 13, 'ㄵ': 50, 'ㅘ': 26, '7': 71, '\\x1a': 72, 'ㅀ': 51, 'ㅒ': 74, 'ㅖ': 39, '-': 65, 'ㄱ': 7, '6': 59, '>': 75, 'ㅣ': 6, 'ㅐ': 21, 'ㅉ': 40, '.': 24, 'ㅇ': 2, 'ㅔ': 20, 'ㅈ': 15, '9': 64, '4': 67, 'ㅠ': 37, 'ㅎ': 14, '5': 63, 'ㅕ': 18, 'ㅝ': 36, \"'\": 49, '\\n': 19, 'ㄶ': 44, 'ㅗ': 9, 'ㅢ': 25, 'ㅍ': 31, '3': 66, 'ㄻ': 55, 'ㅙ': 53, 'ㄿ': 56, 'ㅊ': 23, '!': 52, '8': 68, 'ㅆ': 22, 'ㅟ': 35} \n",
       "\n",
       "\n",
       "type of 'data_loader.chars' is <class 'tuple'>, length is 76\n",
@@ -114,9 +114,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-3-0843d1e4a344>:36: concat (from tensorflow.python.ops.array_ops) is deprecated and will be removed after 2016-12-14.\n",
-      "Instructions for updating:\n",
-      "This op will be removed after the deprecation date. Please switch to tf.concat_v2().\n",
       "Network Ready\n"
      ]
     }
@@ -157,7 +154,7 @@
     "    # Output of RNN \n",
     "    outputs, last_state = tf.contrib.legacy_seq2seq.rnn_decoder(inputs, initial_state\n",
     "                                , cell, loop_function=None, scope='rnnlm')\n",
-    "    output = tf.reshape(tf.concat(1, outputs), [-1, rnn_size])\n",
+    "    output = tf.reshape(tf.concat(outputs, 1), [-1, rnn_size])\n",
     "    logits = tf.nn.xw_plus_b(output, softmax_w, softmax_b)\n",
     "    # Next word probability \n",
     "    probs = tf.nn.softmax(logits)\n",
@@ -238,10 +235,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -253,177 +250,209 @@
       " \n",
       "Prime Text : 누구  => ㄴㅜᴥㄱㅜᴥ \n",
       "data/nine_dreams/model.ckpt-0\n",
-      "SAMPLED TEXT = ㄴㅜᴥㄱㅜᴥ 7\n",
-      "ㅆㅉㄶㄺㄾㄴㅃㄶ?ㅌ\n",
-      "ㄴ 56:ㄾㄶㅊㅊ04ㄲㅉ\n",
-      "ㄾㅍ'ㅖ?ㄹ.ㄾㅖㅓ:ㅚㄵㅑㅉㅊㄵㄲㄷㅖㅔㅡ1ㅏ:ㅉㅓ:ㄾㅓㅐㅠ\u001aㄻㅊ0ㅇㅊ7ㄶ5.ㅆ.ㅆ _ㅞㅊ_ㄶㄵ1ㅞ:'7ㅖ5ㅍㄲㅠ76ㄾㄾㄲㅓㅉㄲㅄㄹㄳ,\n",
-      "4ㅚㄴㄵㅉ6ㅁㅖ_\n",
-      "ㄳㅡㅎㄸㄺㅕㅆㅉ>ㅉ)ㄲㅃㅚㅎㅖ. ㅊㅇ7_4:ㄸ3ㅏ?ㄲㄲ\n",
-      "'\n",
-      "ㄴ:5ㄵㅉ'ㄳ)ㅚㄺ.ㄾㅆㄲ\n",
-      ":ㅍㅃㄱㅏ77ㅌㄸㄹㅛ!ㄾㄹ3ㄹ5ㅛㅉ'ㅊㅊㅞㅒㅍㅗㅡㅆㅁㅚㅚㅊ:ㄵㄹㄶㄶ)ㅚㅍ-?ㅊ'!ㅔㄵ)ㄵ\u001a!ㅠ:ㄴㄸㄲㄴ-\"ㅆㄲㄶㅐㄶ-0!ㄹㄶㄴㄶㅆㄶ.ㄱ1ㄵ\n",
-      "ㄹㄶ,ㅊㄼ:ㄶㅘㅇ.ㅈ7ㅖㅓ-ㅊㅁㅏㄾ3ㄼ\n",
-      "ㅍㅎㄸㄾㅓ1ㅏ!ㅌ?ㅍㅚㄶㅓ:\n",
-      "ㅊ-ㄶ.ㅞㄿ,ㄵㅎㄾㅞㅖㄻㅊㅗㅚㄺㄵㅇㅎ6ㅝㄲㅖㅊㄹㅞ\n",
-      "7ㅆ:ㄹㅚ ㅓㄱㅛ\n",
-      "ㅛㅘ7_ㄳㅛㅐ,ㅉㄴ.ㄲㅖ-ㅖ:ㄶㅁ6ㅞ(ㅊ\n",
-      "ㅛㅠㅈㄺㄹㅊㅍㅛㅍㅚㄾㅉ3:ㅉㄺㅟ7ㄲ1!ㄾㅏㄴㅆㄹㄴㄶㅋ)'?7ㄶ:5,,ㅡㅓ7.ㄾㄱ\n",
-      "ㄹㄷㄷㅛㅘㅚㄵㄾ3ㅛ.ㅣ8ㅉㅍㅣㄶㅠ17ㅘㅏㅊㄾㄾㄵㅚ_\n",
+      "SAMPLED TEXT = ㄴㅜᴥㄱㅜᴥ :ㅢ16ㄵ?ㄲㅓ\n",
+      "ㄵㅖ1ㄳㅀㄾㅞ7ㅄㅆㅞ.ㅡㅄ ㅉㄹㄴㅉㅙ:ㄵ)ㅛㅄㅊ7ㅏㄼ.ㄸㅚ\n",
+      "ㅕ?0ㅉㅓ\n",
+      "\n",
+      "ㅡㅇ?7.\n",
+      ".7ㄼㅛㅚ7ㅎㅏㄹ.\n",
+      "ㄳㄷㅞㅞㅆ.ㅣㄶㅒㄵ:ㅛㄳㅊ\n",
+      "ㅇㅊㄻ\u001aㄵㅁㄻㄾㅖ\n",
+      "ㅓㄴㅖㄴㅛ\u001aㄴㅟㄶㅃ\u001aㄶㅘㅊㄹ.ㅊㄲ:ㅖ.ㅌㄻㄸㄸㄴ)6!ㄿㄾㅛㅛㅘㄶㅊㅆㅘㅠㅖㅊㅉㅄㄼㅚㅏ.ㅞ?ㅉㅡㅠㅛㅏㅊㅓ?ㄸ.ㄸ107.ㅛㅞ5ㅏㄹㅆㄲㅓㅛㅃㄴ)ㅖ(ㅘㄿㄲㅏㄴㄼㅇ15ㄵㅣㅞ1ㄹㄹㅆ1ㄴ1ㅊㅆ\n",
+      "ㅒㅐㅞㅓㄴ\n",
+      "ㅞㅖ81ㅓㅛ?ㅀ3ㅢ0ㅏㅊ'ㅏㅚㄵ0ㅚㄲㅘㅞㅆㄿㅊ6ㅍㅛ7ㅘㅡ8ㅠ7.ㅐㅖㅖ7ㅞㅎㄴ'_ㅖㄴㅆㅛㅛ.8:ㄶㅊ'ㅏㄵ3.ㄲㅑㅖ:ㅉ:1ㅊㄴ73ㅄㅀㄱ\u001aㄷㄶㅍㅡㅠㅍㄵ0\u001a0ㅚㅉ.ㅉㅊㄼㅊ\n",
+      "\n",
+      "ㅖ!7ㅛ1ㄾㄹㅔ':ㅍㄲㅐ_ㅊㄶㅍ6ㅍ7ㅃㅡ6ㅃㄴㅡㅒ(5ㅁㅇ7ㅛㄾ\n",
+      "ㅃㄵㄿ0ㄱㄳㄹ\n",
+      "\"_\n",
+      ".ㅊㅆ6ㄾ5ㅉ.ㅄㄴㅛㄳ?,ㅆ'ㅊㄺ\n",
+      "ㄼㅞㄵㅓㄹㄲ.,ㅛㅄ:ㄴㅆ.ㅖㅠㅍ7ㅃㄹㅋㅖㅚㅞㅆ.ㅛ1?ㄳㅒㅓㄳㅞ.ㅠㅣㅆ?ㅆㄹㄲㅌㅃㄲㄻㅇㅌ5ᴥㅉㅛ?ㅊ,ㅖㅁ>ㄸ\n",
+      "!ㅒㅒㅛ\u001aㅆㄴㅓ?ㅒㅎ.ㅚ\n",
+      "!ㄲㅞㅣㄵㄵㅎ71\n",
+      "))ㅉㄳ.ㅈㄹ)ㅔㄹ1ㄴㄷ4ㄻㄲㅄㅄㅅㅣㄼㅍ\u001aㅊ.:5-ㄶㄹㅆ.ㅆㅠㄲㅎ6)!\n",
+      "ㄳㄴㅖㄲㅝ1'_ㅛㅝㅉㅇㅏㅆ.ㅛㅖㅃ.ㅒㅈㅃㄴㄹㅚㄾ\u001aㅇㅖㄶㅊㄾㅘㅞㅛ.ㅆㄹ!\n",
+      "ㅏ!ㅁㅡㄴ-ㅖㄲ1ㅆㅍㅖ1.ㅎ7 ㅡㄲ:ㅖ7ㅖㄺㅚ)ㅇㅛㄶㄲ3'.ㅉ7ㅖ, ㅖㅍㅐ.ㅆ\n",
+      "ㅙㅖㅎㅆㅞ\n",
+      "ㅆㄳ-:ㅡ1ㅣㄴㄺㄶ-ㄲ. ㄻㅚ.)ㅏㅆ.\n",
+      "ㅏ:ㅃㄳ:ㅛㅛ\n",
+      "ᴥ7-!.ㄴ15ㅓ6,ㄶㄸㅄㅀ.'3ㄹㄾㅡㅛㅆㅅㅏㄴㅎㅇㅊ:ㅆ?ㄵㄵㅎ7.ㅡ1'ㅓㄹㅚㅣㄶㅄ,77ㄹㅞㄱㅓ\n",
+      "-.ㅍㄴ-ㄸ'3:ㅚ\n",
+      "ㅂ9-ㅒㅛㅚㅆ!\n",
+      "33ㄴ:ㅛㅡ\n",
+      "ㅞ3ㅘ7ㅉㄵㅁㅖ\n",
+      "ㅓ\n",
+      "ㅖㅎㅘ0ㄶ:ㄹㅡㅇㄸㅓㄴㄱㅡ!ㅃㅔㅎ>ㅆㅓㅇ,: ㅡㄹ.ㅑㄴㅃㄹㄺㅛㄺㅙ-ㅆ\u001a.ㅛ7ㅇㄴ1ㄲㄶ0ㅋ8\n",
+      ":,ㅆ ㅚ\n",
+      "ㅖㅐㄳ-ㅡ?ㅕㅂㄹㄼㅏㅉㄲㄹㅍㅞㄶㅡ\n",
+      "\n",
+      "ㅛ!ㅉㄵㅘㅓ1ㅏㅖ:ㅏㅡㄾㅚㄻㄸㅡㅘㅛㅆㅍㄳㅉㄾ:ㅉ4ㅢㅃ!ㄲ\n",
+      "ㅘㅛ\n",
+      "ㅚㅊㅍㅏㄴ.ㅖ7ㄻㅕ.ㅉㅡㄴ\n",
+      "ㅛ1\"\u001a?6ㅖㄴ\n",
+      ":?'ㅡㅓㅒㄴㅊㅆ.ㄸㅚ\n",
+      ".ㅛㄳㅆㅆㅉㅞㅕ75_ㄸ.ㄶ'ㅘㅔㄻㅕㅊㄿㄹ,ㅆ'ㅃㅏㄲㅗㅍ1\n",
+      "ㄶㅊ-ㅇㄵㅛ\u001a5ㄷㄹ\u001aㅏㅎㅈㅛㅛ08ㅉㄹㅍ0ㄷㅖ5\n",
+      "ㄺ'ㅡ?ㅣ!ㅘㅎㄴㄵ,\n",
       "\n",
       "\n",
-      "ㅁㄴㄴㅓㄶㅇㅎ?ㅘ'ㄾㅏㄲ__ㅍ ㅊ1ㅏㅆㅑ.ㅣㄻㅄ'ㅓㅊㅊㅒ7ㅞㅛㄴㅇ111ㅆㄻㅀ\u001aㄹㅆ6ㄶㅆㅛㅍㄲㅎㅏ ㄾ(.ㅃ.ㄺㅛ'ㅘㅚㄵ1 \n",
-      "ㅛ )ㅕ)7ㄲㄹ.5ㅝㄹㅆ?'ㄻㄸ_ㅣㄼ3ㅚㅣㅖ!ㅏㅘㄲㅊㄾ9ㅛㅖㄶ7.ㄹㅖ.ㅄㄲㄸ:ㅡㅏㄶㅖㅏㅀㅞ5ㅡ10:ㅊㄹ0ㄻㅡ-ㄲㅎㅡㅆㅏㅍㄲㅚ7ㅓㄾㅈㄺ.ㅠㄻㅁㅚ8ㅖㄴㅅㅀㅖ ㅆㅠㅓㅛㅛ(ㅆ8-ㄶ'?ㅆㅢ').\n",
-      "ㄲㄵㅊㄶ.ㄺㅎㅍㅡㄲ\n",
-      ",ㅏ7:ㅠㅘㅂㄾㄲ\n",
-      "ㅡㄴ\n",
-      ".ㅍㅖㄴㄹ?)ㄴㄼ:ㅚㄼㅡ ㅏㄲㅢ7ㅄㄳ3ㄺ15ㅖㅓㅖ.1ᴥㅆㅍㄶㅓㅖㅖㄹㅉㄳㄹㅣㅓ5ㅎ!ㅎ3\n",
-      "ㅃ\n",
-      "ㅛㄿ-ㄶ.ㅓㅚㄸㄺㅍㅍㄾ.ㄹㅁ5ㅌㄴ.!'6\u001a:-:ㄵㅖ\u001a6ㄴㅡㅚㄴ>ㅡㅚ!!ㅟㄹㅞㅓ\u001a\n",
-      "ㅉㅓㅎ-ㄾㄲ:ㅄ_,ㅍ'ㄻㅏㅡㅇㄲㅇㅛㅏㄲㄹ5?ㅖㅀㅘㅛㅒㅉㅈ-ㄴㄺ7ㅍㅡ\n",
-      "ㄵ\n",
-      "ㅚㅓㄵ:\n",
-      "'ㄺㅆㄴㅠㄴㅢㄲㄾㅕ:ㅓㅗㅃㄾㅖ3ㅆ\u001aㅍㅊㄶㄵㅊㄲㅎㅆㄲ.ㅊㅓㅄ!ㅛㅇㅍ?ㅏㅖㄹ8ㄵ.ㅞ:\n",
-      "3ㄾㅛㅢㅣ,ㅆㄼㅂㄴㄼㄾㅖ?-ㅠㅙ\n",
-      "ㅖㅃㅆ71ㅊㄵㅛ\u001a.\n",
-      "8ㅓㄹㅓㅑㄴㅆㄲㄳㄴ 9ㅏㄵㄾㄷ\n",
-      "7ㅓㅆ_ㄹ7ㄵㅠㄺ.ㅡㄴㅡ,ㅄㅆㄴ),7.ㄾ?)ㅏㄲ>ㅆㅞㅘㅞㅔ0!7ㅍㄸ.ㄵㅇㄴ:ㅄㅡ .ㅆ ㄸ5ㅡㅉ,ㅂㄻ:ㄲ!ㅈㅈ'ㅞㅆㅉ1ㄴ:ㅏㄾㄶ.ㅊㄷㅖ)ㅘㅞ 1ㅉㅢ1.ㅆㅖㅘㄺㅚㅍㄲㅓㄷ:.\n",
-      "ㅌㅖㅡㄴㅓㄸㅖㅣ077ㅏㄳ'ㅆ\n",
-      "5ㅡ\n",
-      "ㄹ)ㅘㅇㅅㅡ)6ㄸ. ㅄㄴ.6ㄻㅃㅓ4ㅍㅓ(\n",
-      "ㅛ.ㅃㅆㄹㄼㄹㄴㅉㅏㅃㅚ \n",
-      "9ㅍ3::ㅆㅖ?ㅜㄹㄴ5)\n",
-      "ㄳ.ㅠ-ㅉ\n",
-      "ㅎ(.ㄿㄼㄺ?ㄿㅖㅠ\n",
-      "ㅛㄱㅡㅆㄴㅇ7:ㅊㅇㄹㅇㅉㅁㄻ1ㅏㅡ.ㅚㄳㅚ->3ㄵㅞㄶㄴ:ㄹㅞㄺㅊㅡㄴㄴ(ㅉ\n",
-      ")?.0ㅊ0ㅡㅓㅐ7ㅅㄿ7ㅊ\n",
-      "ㅊㄾㅚㅍㄳ_2:ㅏㅓㅁㅑㅢ.ㄼㅖ,ㅉㅖ,)ㄵ ㄵㅉㅠㅍ,ㅏㄻㄾㅓㅆ3ㅓ-ㅖㅊ')ㄲ5:\n",
+      "ㅡ1--ㅚㄷㅕㅛㄲㅍㄻ\n",
+      "ㄾㅍㅆ-ㄸ:ㄶㄲㅅㄾ:ㅘ0\n",
+      ".ㄲ?:\u001a\n",
+      "ㄿㄵ?:,ㄵ\n",
+      "ㅆ1ㅖ).'ㄲㅛㅣㅝ6ㄹㅞㅊㄹ,ㄻㅉㄱㅍ:ㅊㅓㅠㅄㅔ6ㅞㅛㄲㄴㄶㅇ7ㅙㅏ-ㅉ!2ㅏㅖㄾㅏㅠ.ㄾㄴㄹㅐㄾ:ㅁㄲ.3ㅊㅚ-ㅘ!ㅊㅛㄻㄺ1 ㅢ\n",
+      "ㄾ6-7ㄵ-ㅃㄶㄵㄶㅆ6ㅆ.ㄹㅒㅛ1?ㄲㅓㄶㅖㅆㅍ')ㄸㅛㅖ.ㄸ,ㄷㅖ:ㅄ4 ㄹㄳㅡㅞㅢㄻㄶ.ㄹㄵㅚㄲ ㅘㅄㅚㅡㅣ.ㅆㅢㄺㅆㅣㅀㄲ\n",
+      "7ㅘㅊㅒ'ㅉ\u001a.ㅖㄻㅗ\n",
+      "ㄶ.ㅍㅄ5ㅘ3ㅍㅛ\n",
+      "ㅘㄶ_ㅢㄲㅟㅏ,ㅁㄵ.',ㅟㅆㅞ.0ㄷㅞ?ㅡㅆㄶ,:.ㄷㄵ7ㄶㅉ6ㄺㅟㄸㅎㄻㅖ5:.ㄺㅏㅉㅊ...ㅔㄹ- ㅡㅡ-ㄻ8ㅏㄾㅛㄲㅌ3ㅋㅇㅍㅁㅊ'7ㄴㅄㅞ5ㅆ).\n",
+      "ㄺ\n",
+      "7.ㅏ? )ㅚ ㅡㅢㅍㅞㅡㅡ\n",
       "\n",
-      "0ㅓㅏㄶ6-ㄳㅒ\n",
-      "ㅌㅚㅊㄹ1. :4(\n",
-      "ㅊ.ㅖㅠ'_ㅘㅍ7ㅇㅇㅄㅟㅟㄾㅇ,ㄴㄴㄾㄺㅛㅆㄴ8ㅊ.ㅖ)ㅎ!ㅏㅆ1ㅈㅏㅉㄴㅖ?ㄾㄾ6-,ㅖ,:ㄻ7ㄲㅐㄵㄵㅎ>ㅎ:7ㅉㅆ.\n",
-      "ㄲㅆㄻㅍㄲㅘㅊㅟ\n",
-      "\u001a'ㅡ\"7ㅓㅚㅄㄴ \u001aㅓㅇ')ㅆ..ㄸ1ㅠ-ㅚ85ㅓㅄㅡ\u001aㅛㄴㅘㅃㅓ.5ㅘㄾ\n",
-      "ㅚㅖ\n",
-      "?ㄵㅕㅛㄹㅐㅓㅆㄸ30ㅊ-ㅚㄱㅓ ㄿㄴㅆㅛ5ㄾㄳ ㄸㅛ)ㄷ)ㄴ6ㅎㄶㄴㅠㅠㅍ0!ㄴ>ㅞㄹㅓㅣ\u001aㄴㅛㅒㄴㅖㅞㄴ ?ㄳ7\u001aㅍ,-ㅐㅛ'ㄳ6?ㅊㅉㄳㅊㅖ-ㅡㄱㅘ.ㅓㅘㅖㅌㅖㄾ3!ㅈㅛ\n",
-      "?ㅒㅎㅉㄸㅏㅃ1ㄸㅍㅉㄴㄲㅍㅏㅍ\n",
-      "ㄳㄸㅊㄶㄲㅆ:ㄾㄳ:ㅡㄵㅎ,ㄼ-ㄺㅎㄿㄴㅘㄿㅡㅓㅠㄴ,\n",
-      "ㄳㄹ:'\n",
-      "'-ㄷㅢ5ㄴㅈㅡ.ㅒㅡ1ㅉ)ㅏㅉㄵㅍㅍㄺㅈㅇㅃㄾㅉㅠ019'ㅎㅎㅞㄶㅖㄶㅓㅄ'ㄾㄶ1ㅓㄲㄲㄾㄲㅌㄲㅡㅇ \n",
-      "ㄱ-!ㅈ.ㄴㄶㅏ:ㅖ\n",
-      "ㄴ7ㅓㅆ1ㄶㅇㄵ.ㅏ ㅍ:ㄹ7ㅊㄲ\n",
-      "ㄻ .ㅋㅕㅏㄳㅛㅎ7ㅇㅆ)ㅎㅜ0ㅏㄴㅎㄷㅖㅆㅓ3,ㄲㅛ4ㄾㅗㅓㅃ:'07\n",
-      ",ㄾ:\n",
-      "ㅉㅃㅃㅍㅖㅄㅕㅘㅏㅛㄾㄲ.ㄼㄺ5ㄻㄵㅖ1ㅞㄸㅡㄵㅡㅣ\n",
-      "6ㅘㄴㅁ!ㅡㄺㄸㅒㅓ,7!ㅐ.ㄺㄺㄵㅊ!ㄴ'ㅖㅖㅆ.4ㅓㅆㅇ-.ㅍㅊㅖ8ㄶㅍ':ㅆㄺ2\n",
-      "6':ㄲㅟㄲㅇ!ㅎㅉㄾ,ㅎㄺㅊㅉㅒㄹ6ㄱㅛ!ㄸㅡㄹ0ㄹ:ㅆ1ㄺㅇㄶㅖ\u001aㅖㅞ.ㅓ1:ㄱㄲ6-!ㅇㄺㄻㅒ:.ㅏ?ㅘ.ㄾ\n",
-      "ㅄㅍㅄㄵㄹ7ㅑ\n",
-      "ㅖ:ㅏㅃㅚ.ㅛㅞ.ㅢㅓㄲㄺㄺㄹ0,ㅡㄴㅋㅓㅕㄵ:ㅣ\u001aㅖㄵㄲㅍㅄㅖㅖ0ㄵㅓ:7ㅚㅖㄴㄹㄼ'.ㅒㄹ)\n",
-      "ㄲ3ㄹㄸㄷㄵ)ㅘ\n",
-      "ㅆㅏㅢㄲㄶㅃㅖ)ㅎㅚㅡㄴ2ㅕㅓ.ㅛ)ㄻ\n",
-      "ㅗㅖㄲㄲㅁ3.0ㅍㅏ\n",
-      "ㄾ0ㄵㅄㅉㅆㅈㅞ:ㄵ!ㅄㄾ?ᴥㅍ\n",
-      " ㅆ\n",
+      "\n",
+      "8ㅃㅆ.ㄾㅓㄻㄳ\n",
+      "ㄵㅡ\u001aㅛㅚㅆㄳㄴㄶ.ㄳㄾ7-ㅕ:\n",
+      "ㄶㅏㅈㅚㅇㄵㄵ7ㅍ-ㅓㅘㄴㅛㄲㅏㅆㅐ-ㅍㅘㅍㅛ5ㅓㅛㅄ\n",
+      "ㅎ\n",
+      "\n",
+      "_ㄶㅖㅉ.ㅉ.ㅎㅞㄾ\n",
+      "ㅚ\n",
+      "ㅉㅚ)ㅘㅓ,ㅊㄸ.0ㅓ\u001aㅇㅖㄱㅐ\n",
+      "5:ㄹㅚㅡㄻ:.:ㅒ7ㅚㄾㄻㅐ!ㄻㅆㅇ:ㄲㅘㄵㅍㅍ ㄲㅐㄶㅘㅏ\n",
+      ":ㅖㅔㄾ1ㄴ.ㅎ7ㅖㅚ71,?1ㅓ.ㅟㄴ'1!ㄵㅏㅞㅆㅏㅌ>ㄶㅆㄾ.ㅓ:ㄴ-ㄺ'_ㄶㄵ.ㄿㅍㅊㄴㅆㅞ,ㅉㅖㅆㄲ1ㄵ.ㅛㄹ\u001aㅡ-ㅞ(.\u001aㅢ.ㅞㅆㅓ,ㅄ6ㅖㅒㄼㄳ97ㅅ5ㅇ\n",
+      "ㄺㄸ)ㅇㅖ7ㅌㅃ.ㅍㅚㄴ:ㅌㅀㅛㅚ:ㄶㅛ:ㅊㅚㄴㅊ-ㅎ ㅄㅓ?\"8ㅏㅓㅆㄵㅆㄵㅛㄹㅡㄾㄾㄾㄴㄹ.)ㄹㅍㅓㅆ.ㅓㅓ,ㅏㅚㅘ\n",
+      "ㅛ'ㄵ\n",
+      ",-ㅆㄿㅀ,ㅚㅘㄱㅉㅢㅖㄶㅡㅛㄵㅓㄶㅘ5ㅘㅊㅊ3ㅢ8ㅡ.ㄲㄹㄵㅗㅌㅊ4,?ㅇㄴㅉ\n",
+      "ㅆㅆㅉㅓ?ㅇㅆᴥㄴㄸ\u001aㅓㄵ?'\n",
+      "ㄹㄻㄴㄸ,ㅖ7ㅡㅛㄻ-ㅛ7ㅉㅟㅒㅊㅆ.ㄴㄴㅒ-ㅄㄲ03ㅏㅋㅊㅍ\n",
+      ":ㅣ\n",
+      "ㅚㅆㅠㅏㅣㄲㅡ\n",
+      "1:ㄴㅞㅛ8ㅇㅆㅘㅍㅡㄴㅄㅖ>ㄻ\n",
+      "ㅌㅍ5ㅘㅏㅠㅂㄹㅛㅅㅚㄾ\u001a\n",
+      ".ㅆㅇ3 ㄵㄶ,\n",
+      "1ㅔㄹㅓㅡ1'ㅊ\n",
+      "ㅏ:'ㅡ0ㅘㄷㅄㅃ-:6ㅖㄻ\n",
+      "ㅓㄲㅛㄹㅛㅞ?7ㄸㄷㅒ ㅁㅃㄹㅊㅃㄺ\n",
+      "ㅘ\n",
+      ")ㅍ)5ㄹㄹㅖㅌ!ㅄ?-ㅆ:ㄵㅘ!)ㄺㄾㅌㅏㄾㅠ1\n",
+      "ㄱㄾ1ㅛㄶ\"ㅣㅁㄵ_ㄴㅁㅁ-ㅚ\n",
+      "1\n",
+      "_0\n",
+      "ㅞㅚㅟㄷㄻ3ㄶ\u001aㄹㅍㅃㅗㅇ6ㅞㅒㄲ\n",
+      "ㅍㅊㄺㅡㅖㄴㄴㄻㄱㄺㅘ5ㄲㅇ:ㅒ)ㅎ\u001a!1:ㄸ6ㅆㄾㅅㅊ1!ㄶ\u001aㅏㄴㅣㄻㄴ1?ㅠ'ㅛㅕㄸㄶㅎ3ㅙ'.ㅢㄶㅍㅎ\u001aㅊㅎㅉㅍ\n",
+      ".ㄴㅏㅡㄺㅉㅖ\n",
+      "'ㅇㅓㅊㅡㅡ,:ㅘㄿ,ㄹㅓㅎㅛㄾㄲㅞㅊ7ㄺ.ㅕㅠㅍ\n",
+      ":ㅠ6ㅛㅊㅏ.ㄻㄲㄿㅓㅓㅛㅡㅆㅎ:ㅏㅁㄹㅊㅁㄾㅞㅕ\n",
+      "!.ㅊ\n",
+      "..ㄹㄾㅆ1ㄲㅊㅣㅏㅊㅛㄾㅏ7:ㅘㄺㅄ:ㄹㄳㅚㅣㅆㅍ\n",
+      "ㅓㄲ\u001aㅏㄼㅏ.ㅣㅓㅉ\n",
       "ㅛ\n",
-      "ㄸㅏ\u001aㅆ.7ㅍ\n",
-      "1ㄹㅚㅡ,ㅎ5ㅡ:ㅊㅆ ?ㅊ1ㄺㄶ.ㅖ7ㅇ\n",
-      "ㅛㅏㅁㅆㄶㄶㅖ ㅞ55ㅍ01ㅎㅏ\n",
-      "ㅏ\n",
-      " ㄾ-ㄹㄴㅓㄾㅊㄵㅖ7.5'ㄳ)ㅛㄹㅆ\n",
-      "ㅃ-ㄵㅆ_ㅓㅢㅊ!))_ㅆㄹㅔ.ㄾㅊ)ㄹㅚㅆㅓㄾㅡㅅ7)ㄲㅒㅛㄲ:ㅚ?ㅠㅡ!ㅐ ㅓㅏ:ㅛ? ㅛㅡㅍㅡㅚ).ㅟㅞㅕㅆㅆ 67ㄴㅉ\n",
-      "ㅍㅊㅆ3ㅑ7ㅖㅀㅏㅊ\n",
-      "? ㄾ:2ㅐㄺ\n",
-      ",'ㄳ)ㅕㅏㄹㄻㅄㄲㄴ1.:ㅖ'ㅞㄾㅞㄺㅘ?ㅄ??ㄴ?ㅘㅆㅆㅍ_ㅖㅛㅃ.-ㄴ6.ㅄㅎㄾㄹㅍㅍㄸㄴ)ㄿㅙ\n",
+      "ㅖ ㅡ:ㅛㅒ\n",
+      "ㅇ.ㄵ:'7)7ㅊㄾ)ㅇㅚㅊㅍㅚㅡㄲㅛㅏㅈㅖㄱㄿㅌ\n",
+      "?(.:ㅜ7\n",
+      ".ㅈㅊ\u001aㄹ18ㅆㅍㅚ)ㅢㅊㅖ,?ㄻㅇㅖㅞ.ㅆㅍㄷㅔㄼㄵㅕㅇ1ㄹ?ㅃㅚㄲㄹㄶㅡㅛ1ㄿ-\"ㄾㅆㅛㅊㄵ.\n",
+      "ㄶㅞㅖㄵ:ㅘㅞㅣㄴ6ㅛㅓㄹㄹㅓㄲㄴㅏ7.\n",
       "\n",
-      "7ㅖㅆㅁ.\u001a\u001a5(ㅆㄲㄴㅁㄹ\n",
-      "ㄲ7ㅘ7\n",
-      "'ㅓ.ㅠㄳㅖ\n",
-      "ㅊ\n",
       "\n",
       "-- RESULT --\n",
-      "누구 7\n",
-      "ㅆㅉㄶㄺㄾㄴㅃㄶ?ㅌ\n",
-      "ㄴ 56:ㄾㄶㅊㅊ04ㄲㅉ\n",
-      "ㄾㅍ'ㅖ?ㄹ.ㄾㅖㅓ:ㅚㄵㅑㅉㅊㄵㄲ뎨ㅔㅡ1ㅏ:쩌:ㄾㅓㅐㅠ\u001aㄻㅊ0ㅇㅊ7ㄶ5.ㅆ.ㅆ _ㅞㅊ_ㄶㄵ1ㅞ:'7ㅖ5ㅍ뀨76ㄾㄾ꺼ㅉㄲㅄㄹㄳ,\n",
-      "4ㅚㄴㄵㅉ6몌_\n",
-      "ㄳㅡㅎㄸㄺㅕㅆㅉ>ㅉ)ㄲ뾯ㅖ. ㅊㅇ7_4:ㄸ3ㅏ?ㄲㄲ\n",
-      "'\n",
-      "ㄴ:5ㄵㅉ'ㄳ)ㅚㄺ.ㄾㅆㄲ\n",
-      ":ㅍㅃ가77ㅌㄸ료!ㄾㄹ3ㄹ5ㅛㅉ'ㅊ췌ㅒ포ㅡㅆ뫼ㅚㅊ:ㄵㄹㄶㄶ)ㅚㅍ-?ㅊ'!ㅔㄵ)ㄵ\u001a!ㅠ:ㄴㄸㄲㄴ-\"ㅆㄲㄶㅐㄶ-0!ㄹㄶㄴㄶㅆㄶ.ㄱ1ㄵ\n",
-      "ㄹㄶ,ㅊㄼ:ㄶㅘㅇ.ㅈ7ㅖㅓ-ㅊ맕3ㄼ\n",
-      "ㅍㅎㄸㄾㅓ1ㅏ!ㅌ?푆ㅓ:\n",
-      "ㅊ-ㄶ.ㅞㄿ,ㄵㅎㄾㅞㅖㄻ초ㅚㄺㄵㅇㅎ6ㅝ꼧뤠\n",
-      "7ㅆ:뢰 ㅓ교\n",
-      "ㅛㅘ7_ㄳㅛㅐ,ㅉㄴ.꼐-ㅖ:ㄶㅁ6ㅞ(ㅊ\n",
-      "ㅛㅠㅈㄺㄹㅊ푶ㅚㄾㅉ3:ㅉㄺㅟ7ㄲ1!ㄾㅏㄴㅆㄹㄴㄶㅋ)'?7ㄶ:5,,ㅡㅓ7.ㄾㄱ\n",
-      "ㄹㄷ됴ㅘㅚㄵㄾ3ㅛ.ㅣ8ㅉ핂ㅠ17ㅘㅏㅊㄾㄾㄵㅚ_\n",
+      "누구 :ㅢ16ㄵ?꺼\n",
+      "ㄵㅖ1ㄳㅀㄾㅞ7ㅄ쒜.ㅡㅄ ㅉㄹㄴ쫴:ㄵ)ㅛㅄㅊ7ㅏㄼ.뙤\n",
+      "ㅕ?0쩌\n",
+      "\n",
+      "ㅡㅇ?7.\n",
+      ".7ㄼㅛㅚ7할.\n",
+      "ㄳ뒈ㅞㅆ.ㅣㄶㅒㄵ:ㅛㄳㅊ\n",
+      "ㅇㅊㄻ\u001aㄵㅁㄻㄾㅖ\n",
+      "ㅓ녠ㅛ\u001a뉞ㅃ\u001aㄶㅘㅊㄹ.ㅊㄲ:ㅖ.ㅌㄻㄸㄸㄴ)6!ㄿㄾㅛㅛㅘㄶㅊ쏴ㅠㅖㅊㅉㅄㄼㅚㅏ.ㅞ?쯔ㅠㅛㅏ처?ㄸ.ㄸ107.ㅛㅞ5ㅏㄹㅆ꺼ㅛㅃㄴ)ㅖ(ㅘㄿ깐ㄼㅇ15ㄵㅣㅞ1ㄹㄹㅆ1ㄴ1ㅊㅆ\n",
+      "ㅒㅐㅞㅓㄴ\n",
+      "ㅞㅖ81ㅓㅛ?ㅀ3ㅢ0ㅏㅊ'ㅏㅚㄵ0ㅚ꽈ㅞㅆㄿㅊ6표7ㅘㅡ8ㅠ7.ㅐㅖㅖ7ㅞㅎㄴ'_ㅖㄴ쑈ㅛ.8:ㄶㅊ'ㅏㄵ3.꺄ㅖ:ㅉ:1ㅊㄴ73ㅄㅀㄱ\u001aㄷㄶ프ㅠㅍㄵ0\u001a0ㅚㅉ.ㅉㅊㄼㅊ\n",
+      "\n",
+      "ㅖ!7ㅛ1ㄾ레':ㅍ깨_ㅊㄶㅍ6ㅍ7쁘6ㅃ느ㅒ(5ㅁㅇ7ㅛㄾ\n",
+      "ㅃㄵㄿ0ㄱㄳㄹ\n",
+      "\"_\n",
+      ".ㅊㅆ6ㄾ5ㅉ.ㅄ뇫?,ㅆ'ㅊㄺ\n",
+      "ㄼㅞㄵㅓㄹㄲ.,ㅛㅄ:ㄴㅆ.ㅖㅠㅍ7ㅃㄹ켸ㅚㅞㅆ.ㅛ1?ㄳㅒㅓㄳㅞ.ㅠㅣㅆ?ㅆㄹㄲㅌㅃㄲㄻㅇㅌ5쬬?ㅊ,ㅖㅁ>ㄸ\n",
+      "!ㅒㅒㅛ\u001aㅆ너?ㅒㅎ.ㅚ\n",
+      "!꿰ㅣㄵㄵㅎ71\n",
+      "))ㅉㄳ.ㅈㄹ)ㅔㄹ1ㄴㄷ4ㄻㄲㅄㅄ싧ㅍ\u001aㅊ.:5-ㄶㄹㅆ.쓖ㅎ6)!\n",
+      "ㄳ녞ㅝ1'_ㅛㅝㅉ았.ㅛㅖㅃ.ㅒㅈㅃㄴ뢽\u001a옎ㅊㄾㅘㅞㅛ.ㅆㄹ!\n",
+      "ㅏ!믄-ㅖㄲ1ㅆ폐1.ㅎ7 ㅡㄲ:ㅖ7ㅖㄺㅚ)욚ㄲ3'.ㅉ7ㅖ, ㅖ패.ㅆ\n",
+      "ㅙㅖㅎ쒜\n",
+      "ㅆㄳ-:ㅡ1ㅣㄴㄺㄶ-ㄲ. ㄻㅚ.)ㅏㅆ.\n",
+      "ㅏ:ㅃㄳ:ㅛㅛ\n",
+      "7-!.ㄴ15ㅓ6,ㄶㄸㅄㅀ.'3ㄹㄾㅡㅛㅆ삲ㅇㅊ:ㅆ?ㄵㄵㅎ7.ㅡ1'ㅓ뢰ㅣㄶㅄ,77뤡ㅓ\n",
+      "-.ㅍㄴ-ㄸ'3:ㅚ\n",
+      "ㅂ9-ㅒㅛㅚㅆ!\n",
+      "33ㄴ:ㅛㅡ\n",
+      "ㅞ3ㅘ7ㅉㄵ몌\n",
+      "ㅓ\n",
+      "ㅖ화0ㄶ:릉떤ㄱㅡ!뼇>썽,: ㅡㄹ.ㅑㄴㅃㄹㄺㅛㄺㅙ-ㅆ\u001a.ㅛ7ㅇㄴ1ㄲㄶ0ㅋ8\n",
+      ":,ㅆ ㅚ\n",
+      "ㅖㅐㄳ-ㅡ?ㅕㅂㄹㄼㅏㅉㄲㄹ풶ㅡ\n",
+      "\n",
+      "ㅛ!ㅉㄵㅘㅓ1ㅏㅖ:ㅏㅡㄾㅚㄻ뜨ㅘㅛㅆㅍㄳㅉㄾ:ㅉ4ㅢㅃ!ㄲ\n",
+      "ㅘㅛ\n",
+      "ㅚㅊ판.ㅖ7ㄻㅕ.쯘\n",
+      "ㅛ1\"\u001a?6ㅖㄴ\n",
+      ":?'ㅡㅓㅒㄴㅊㅆ.뙤\n",
+      ".ㅛㄳㅆㅆ쮀ㅕ75_ㄸ.ㄶ'ㅘㅔㄻㅕㅊㄿㄹ,ㅆ'빢ㅗㅍ1\n",
+      "ㄶㅊ-ㅇㄵㅛ\u001a5ㄷㄹ\u001aㅏㅎ죠ㅛ08ㅉㄹㅍ0뎨5\n",
+      "ㄺ'ㅡ?ㅣ!ㅘㅎㄴㄵ,\n",
       "\n",
       "\n",
-      "ㅁㄴ넎ㅇㅎ?ㅘ'ㄾㅏㄲ__ㅍ ㅊ1ㅏ쌰.ㅣㄻㅄ'ㅓㅊ챼7ㅞㅛㄴㅇ111ㅆㄻㅀ\u001aㄹㅆ6ㄶ쑢ㄲ하 ㄾ(.ㅃ.ㄺㅛ'ㅘㅚㄵ1 \n",
-      "ㅛ )ㅕ)7ㄲㄹ.5ㅝㄹㅆ?'ㄻㄸ_ㅣㄼ3ㅚㅣㅖ!ㅏㅘㄲㅊㄾ9ㅛㅖㄶ7.례.ㅄㄲㄸ:ㅡㅏㄶㅖㅏㅀㅞ5ㅡ10:ㅊㄹ0ㄻㅡ-ㄲ흤ㅏㅍ꾀7ㅓㄾㅈㄺ.ㅠㄻ뫼8ㅖㄴㅅㅀㅖ 쓔ㅓㅛㅛ(ㅆ8-ㄶ'?씌').\n",
-      "ㄲㄵㅊㄶ.ㄺㅎ픆\n",
-      ",ㅏ7:ㅠㅘㅂㄾㄲ\n",
-      "ㅡㄴ\n",
-      ".폔ㄹ?)ㄴㄼ:ㅚㄼㅡ ㅏ끠7ㅄㄳ3ㄺ15ㅖㅓㅖ.1ㅆㅍㄶㅓㅖㅖㄹㅉㄳ리ㅓ5ㅎ!ㅎ3\n",
-      "ㅃ\n",
-      "ㅛㄿ-ㄶ.ㅓㅚㄸㄺㅍㅍㄾ.ㄹㅁ5ㅌㄴ.!'6\u001a:-:ㄵㅖ\u001a6느ㅚㄴ>ㅡㅚ!!ㅟ뤠ㅓ\u001a\n",
-      "쩧-ㄾㄲ:ㅄ_,ㅍ'ㄻㅏㅡㅇㄲ요ㅏㄲㄹ5?ㅖㅀㅘㅛㅒㅉㅈ-ㄴㄺ7프\n",
-      "ㄵ\n",
-      "ㅚㅓㄵ:\n",
-      "'ㄺㅆ뉸ㅢㄲㄾㅕ:ㅓㅗㅃㄾㅖ3ㅆ\u001aㅍㅊㄶㄵㅊㄲㅎㅆㄲ.첪!ㅛㅇㅍ?ㅏㅖㄹ8ㄵ.ㅞ:\n",
-      "3ㄾㅛㅢㅣ,ㅆㄼㅂㄴㄼㄾㅖ?-ㅠㅙ\n",
-      "ㅖㅃㅆ71ㅊㄵㅛ\u001a.\n",
-      "8ㅓ러ㅑㄴㅆㄲㄳㄴ 9ㅏㄵㄾㄷ\n",
-      "7ㅓㅆ_ㄹ7ㄵㅠㄺ.ㅡ느,ㅄㅆㄴ),7.ㄾ?)ㅏㄲ>쒜ㅘㅞㅔ0!7ㅍㄸ.ㄵㅇㄴ:ㅄㅡ .ㅆ ㄸ5ㅡㅉ,ㅂㄻ:ㄲ!ㅈㅈ'ㅞㅆㅉ1ㄴ:ㅏㄾㄶ.ㅊ뎨)ㅘㅞ 1쯰1.쎼ㅘㄺㅚㅍ껃:.\n",
-      "톄ㅡ너뗴ㅣ077ㅏㄳ'ㅆ\n",
-      "5ㅡ\n",
-      "ㄹ)ㅘㅇ스)6ㄸ. ㅄㄴ.6ㄻ뻐4퍼(\n",
-      "ㅛ.ㅃㅆㄹㄼㄹㄴ짜뾔 \n",
-      "9ㅍ3::쎼?ㅜㄹㄴ5)\n",
-      "ㄳ.ㅠ-ㅉ\n",
-      "ㅎ(.ㄿㄼㄺ?ㄿㅖㅠ\n",
-      "ㅛ긌ㄴㅇ7:ㅊㅇㄹㅇㅉㅁㄻ1ㅏㅡ.ㅚㄳㅚ->3ㄵㅞㄶㄴ:뤩츤ㄴ(ㅉ\n",
-      ")?.0ㅊ0ㅡㅓㅐ7ㅅㄿ7ㅊ\n",
-      "ㅊㄾㅚㅍㄳ_2:ㅏㅓ먀ㅢ.ㄼㅖ,쪠,)ㄵ ㄵ쯒,ㅏㄻㄾㅓㅆ3ㅓ-ㅖㅊ')ㄲ5:\n",
+      "ㅡ1--ㅚ뎌ㅛㄲㅍㄻ\n",
+      "ㄾㅍㅆ-ㄸ:ㄶㄲㅅㄾ:ㅘ0\n",
+      ".ㄲ?:\u001a\n",
+      "ㄿㄵ?:,ㄵ\n",
+      "ㅆ1ㅖ).'꾜ㅣㅝ6뤷ㄹ,ㄻㅉㄱㅍ:처ㅠㅄㅔ6ㅞㅛㄲㄴㄶㅇ7ㅙㅏ-ㅉ!2ㅏㅖㄾㅏㅠ.ㄾㄴ랥:ㅁㄲ.3최-ㅘ!춂ㄺ1 ㅢ\n",
+      "ㄾ6-7ㄵ-ㅃㄶㄵㄶㅆ6ㅆ.럐ㅛ1?껂ㅖㅆㅍ')뚀ㅖ.ㄸ,뎨:ㅄ4 ㄹㄳㅡㅞㅢㄻㄶ.ㄹㄵㅚㄲ ㅘㅄㅚㅡㅣ.씕씷ㄲ\n",
+      "7ㅘ챼'ㅉ\u001a.ㅖㄻㅗ\n",
+      "ㄶ.ㅍㅄ5ㅘ3표\n",
+      "ㅘㄶ_ㅢ뀌ㅏ,ㅁㄵ.',ㅟ쒜.0뒈?ㅡㅆㄶ,:.ㄷㄵ7ㄶㅉ6ㄺㅟㄸㅎㄻㅖ5:.ㄺㅏㅉㅊ...ㅔㄹ- ㅡㅡ-ㄻ8ㅏㄾㅛㄲㅌ3ㅋㅇㅍㅁㅊ'7ㄴㅄㅞ5ㅆ).\n",
+      "ㄺ\n",
+      "7.ㅏ? )ㅚ ㅡㅢ풰ㅡㅡ\n",
       "\n",
-      "0ㅓㅏㄶ6-ㄳㅒ\n",
-      "툋ㄹ1. :4(\n",
-      "ㅊ.ㅖㅠ'_ㅘㅍ7ㅇㅇㅄㅟㅟㄾㅇ,ㄴㄴㄾㄺㅛㅆㄴ8ㅊ.ㅖ)ㅎ!ㅏㅆ1자ㅉ녜?ㄾㄾ6-,ㅖ,:ㄻ7깭ㄵㅎ>ㅎ:7ㅉㅆ.\n",
-      "ㄲㅆㄻㅍ꽟ㅟ\n",
-      "\u001a'ㅡ\"7ㅓㅚㅄㄴ \u001aㅓㅇ')ㅆ..ㄸ1ㅠ-ㅚ85ㅓㅄㅡ\u001aㅛ놔뻐.5ㅘㄾ\n",
-      "ㅚㅖ\n",
-      "?ㄵㅕㅛ래ㅓㅆㄸ30ㅊ-ㅚ거 ㄿㄴ쑈5ㄾㄳ 뚀)ㄷ)ㄴ6ㅎㄶ뉴ㅠㅍ0!ㄴ>ㅞ러ㅣ\u001a뇨ㅒ녜ㅞㄴ ?ㄳ7\u001aㅍ,-ㅐㅛ'ㄳ6?ㅊㅉㄳ쳬-ㅡ과.ㅓㅘㅖ톑3!죠\n",
-      "?ㅒㅎㅉ따ㅃ1ㄸㅍㅉㄴㄲ팦\n",
-      "ㄳㄸㅊㄶㄲㅆ:ㄾㄳ:ㅡㄵㅎ,ㄼ-ㄺㅎㄿ놢ㅡㅓㅠㄴ,\n",
-      "ㄳㄹ:'\n",
-      "'-듸5ㄴ즈.ㅒㅡ1ㅉ)ㅏㅉㄵㅍㅍㄺㅈㅇㅃㄾ쮸019'ㅎ휂ㅖㄶㅓㅄ'ㄾㄶ1ㅓㄲㄲㄾㄲㅌ끙 \n",
-      "ㄱ-!ㅈ.ㄴㄶㅏ:ㅖ\n",
-      "ㄴ7ㅓㅆ1ㄶㅇㄵ.ㅏ ㅍ:ㄹ7ㅊㄲ\n",
-      "ㄻ .켜ㅏㄳㅛㅎ7ㅇㅆ)후0ㅏㄴㅎ뎼ㅓ3,꾜4ㄾㅗㅓㅃ:'07\n",
-      ",ㄾ:\n",
-      "ㅉㅃㅃ폢ㅕㅘㅏㅛㄾㄲ.ㄼㄺ5ㄻㄵㅖ1ㅞ뜭ㅡㅣ\n",
-      "6ㅘㄴㅁ!ㅡㄺ떄ㅓ,7!ㅐ.ㄺㄺㄵㅊ!ㄴ'ㅖㅖㅆ.4ㅓㅆㅇ-.ㅍ쳬8ㄶㅍ':ㅆㄺ2\n",
-      "6':뀎ㅇ!ㅎㅉㄾ,ㅎㄺㅊ쨸6교!뜰0ㄹ:ㅆ1ㄺㅇㄶㅖ\u001aㅖㅞ.ㅓ1:ㄱㄲ6-!ㅇㄺㄻㅒ:.ㅏ?ㅘ.ㄾ\n",
-      "ㅄㅍㅄㄵㄹ7ㅑ\n",
-      "ㅖ:ㅏ뾔.ㅛㅞ.ㅢㅓㄲㄺㄺㄹ0,ㅡㄴ커ㅕㄵ:ㅣ\u001aㅖㄵㄲㅍㅄㅖㅖ0ㄵㅓ:7ㅚㅖㄴㄹㄼ'.ㅒㄹ)\n",
-      "ㄲ3ㄹㄸㄷㄵ)ㅘ\n",
-      "싸ㅢㄲㄶ뼤)회ㅡㄴ2ㅕㅓ.ㅛ)ㄻ\n",
-      "ㅗㅖㄲㄲㅁ3.0파\n",
-      "ㄾ0ㄵㅄㅉㅆ줴:ㄵ!ㅄㄾ?ㅍ\n",
-      " ㅆ\n",
+      "\n",
+      "8ㅃㅆ.ㄾㅓㄻㄳ\n",
+      "ㄵㅡ\u001aㅛㅚㅆㄳㄴㄶ.ㄳㄾ7-ㅕ:\n",
+      "ㄶㅏ죙ㄵㄵ7ㅍ-ㅓㅘ뇪ㅏ쌔-퐢ㅛ5ㅓㅛㅄ\n",
+      "ㅎ\n",
+      "\n",
+      "_ㄶㅖㅉ.ㅉ.휉\n",
+      "ㅚ\n",
+      "쬐)ㅘㅓ,ㅊㄸ.0ㅓ\u001a옉ㅐ\n",
+      "5:뢰ㅡㄻ:.:ㅒ7ㅚㄾㄻㅐ!ㄻㅆㅇ:꽍ㅍㅍ 깮ㅘㅏ\n",
+      ":ㅖㅔㄾ1ㄴ.ㅎ7ㅖㅚ71,?1ㅓ.ㅟㄴ'1!ㄵㅏㅞ쌑>ㄶㅆㄾ.ㅓ:ㄴ-ㄺ'_ㄶㄵ.ㄿㅍㅊㄴ쒜,쪴ㄲ1ㄵ.ㅛㄹ\u001aㅡ-ㅞ(.\u001aㅢ.ㅞ써,ㅄ6ㅖㅒㄼㄳ97ㅅ5ㅇ\n",
+      "ㄺㄸ)예7ㅌㅃ.푄:ㅌㅀㅛㅚ:ㄶㅛ:쵠ㅊ-ㅎ ㅄㅓ?\"8ㅏㅓㅆㄵㅆㄵㅛ릁ㄾㄾㄴㄹ.)ㄹ펐.ㅓㅓ,ㅏㅚㅘ\n",
+      "ㅛ'ㄵ\n",
+      ",-ㅆㄿㅀ,ㅚㅘㄱ쯰ㅖㄶㅡㅛㄵㅓㄶㅘ5ㅘㅊㅊ3ㅢ8ㅡ.ㄲㄹㄵㅗㅌㅊ4,?ㅇㄴㅉ\n",
+      "ㅆㅆ쩌?ㅇㅆㄴㄸ\u001aㅓㄵ?'\n",
+      "ㄹㄻㄴㄸ,ㅖ7ㅡㅛㄻ-ㅛ7쮜ㅒㅊㅆ.ㄴ냬-ㅄㄲ03ㅏㅋㅊㅍ\n",
+      ":ㅣ\n",
+      "ㅚ쓔ㅏㅣ끄\n",
+      "1:눼ㅛ8ㅇ쐎ㅡㄴㅄㅖ>ㄻ\n",
+      "ㅌㅍ5ㅘㅏㅠㅂ룟ㅚㄾ\u001a\n",
+      ".ㅆㅇ3 ㄵㄶ,\n",
+      "1ㅔ러ㅡ1'ㅊ\n",
+      "ㅏ:'ㅡ0ㅘㄷㅄㅃ-:6ㅖㄻ\n",
+      "ㅓ꾤ㅛㅞ?7ㄸ댸 ㅁㅃㄹㅊㅃㄺ\n",
+      "ㅘ\n",
+      ")ㅍ)5ㄹ롙!ㅄ?-ㅆ:ㄵㅘ!)ㄺㄾ탍ㅠ1\n",
+      "ㄱㄾ1ㅛㄶ\"ㅣㅁㄵ_ㄴㅁㅁ-ㅚ\n",
+      "1\n",
+      "_0\n",
+      "ㅞㅚㅟㄷㄻ3ㄶ\u001aㄹㅍ뽕6ㅞㅒㄲ\n",
+      "ㅍㅊㄺㅡㅖㄴㄴㄻㄱㄺㅘ5ㄲㅇ:ㅒ)ㅎ\u001a!1:ㄸ6ㅆㄾㅅㅊ1!ㄶ\u001aㅏ닒ㄴ1?ㅠ'ㅛㅕㄸㄶㅎ3ㅙ'.ㅢㄶㅍㅎ\u001aㅊㅎㅉㅍ\n",
+      ".나ㅡㄺ쪠\n",
+      "'엋ㅡㅡ,:ㅘㄿ,렇ㅛㄾ뀇7ㄺ.ㅕㅠㅍ\n",
+      ":ㅠ6ㅛ차.ㄻㄲㄿㅓㅓㅛㅡㅆㅎ:ㅏㅁㄹㅊㅁㄾㅞㅕ\n",
+      "!.ㅊ\n",
+      "..ㄹㄾㅆ1ㄲ치ㅏ춅ㅏ7:ㅘㄺㅄ:ㄹㄳㅚㅣㅆㅍ\n",
+      "ㅓㄲ\u001aㅏㄼㅏ.ㅣㅓㅉ\n",
       "ㅛ\n",
-      "따\u001aㅆ.7ㅍ\n",
-      "1뢰ㅡ,ㅎ5ㅡ:ㅊㅆ ?ㅊ1ㄺㄶ.ㅖ7ㅇ\n",
-      "ㅛㅏㅁㅆㄶㄶㅖ ㅞ55ㅍ01하\n",
-      "ㅏ\n",
-      " ㄾ-ㄹ넕ㅊㄵㅖ7.5'ㄳ)ㅛㄹㅆ\n",
-      "ㅃ-ㄵㅆ_ㅓㅢㅊ!))_ㅆ레.ㄾㅊ)룄ㅓㄾㅡㅅ7)꺠ㅛㄲ:ㅚ?ㅠㅡ!ㅐ ㅓㅏ:ㅛ? ㅛㅡ프ㅚ).ㅟㅞㅕㅆㅆ 67ㄴㅉ\n",
-      "ㅍㅊㅆ3ㅑ7ㅖㅀㅏㅊ\n",
-      "? ㄾ:2ㅐㄺ\n",
-      ",'ㄳ)ㅕㅏㄹㄻㅄㄲㄴ1.:ㅖ'ㅞㄾㅞㄺㅘ?ㅄ??ㄴ?ㅘㅆㅆㅍ_ㅖㅛㅃ.-ㄴ6.ㅄㅎㄾㄹㅍㅍㄸㄴ)ㄿㅙ\n",
-      "\n",
-      "7ㅖㅆㅁ.\u001a\u001a5(ㅆㄲㄴㅁㄹ\n",
-      "ㄲ7ㅘ7\n",
-      "'ㅓ.ㅠㄳㅖ\n",
+      "ㅖ ㅡ:ㅛㅒ\n",
+      "ㅇ.ㄵ:'7)7ㅊㄾ)욏푀ㅡ꾜ㅏ졕ㄿㅌ\n",
+      "?(.:ㅜ7\n",
+      ".ㅈㅊ\u001aㄹ18ㅆ푀)ㅢ쳬,?ㄻ예ㅞ.ㅆㅍ덻ㄵㅕㅇ1ㄹ?뾖ㄹㄶㅡㅛ1ㄿ-\"ㄾ쑟ㄵ.\n",
+      "ㄶㅞㅖㄵ:ㅘㅞㅣㄴ6ㅛㅓㄹ럮나7.\n",
       "\n"
      ]
     }
