--- a/notebooks/char_rnn_train_tutorial.ipynb
+++ b/notebooks/char_rnn_train_tutorial.ipynb
@@ -389,7 +389,7 @@
     "sess = tf.Session()\n",
     "sess.run(tf.global_variables_initializer())\n",
     "summary_writer = tf.summary.FileWriter(save_dir, graph=sess.graph)\n",
-    "saver = tf.train.Saver(tf.tf.global_variables())\n",
+    "saver = tf.train.Saver(tf.global_variables())\n",
     "init_time = time.time()\n",
     "for epoch in range(num_epochs):\n",
     "    # Learning rate scheduling \n",
